offlineimap (3.99.2) unstable; urgency=low

  * Further attempts to fix imapsplit problems.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 15 Oct 2002 12:35:42 -0500

offlineimap (3.99.1) unstable; urgency=low

  * Fixed some syntax errors in imaputil.py
  * Fixed a syntax error with mbnames

 -- John Goerzen <jgoerzen@complete.org>  Wed,  9 Oct 2002 19:34:37 -0500

offlineimap (3.99.0) unstable; urgency=low

  * The next few releases are adding features and reorganizing
    code in preparation for 4.0.0.
  * imaputil.py now logs information with IMAP debugging is enabled.
  * Added folderfilter capability to mbnames recorder.  You can now omit
    specified folders from the mbnames output.
  * Added a workaround to imaputil.py to deal with a bug in imaplib.py's
    tuple when a response contains a literal in certain cases.
  * Split out the code in bin/offlineimap into offlineimap/init.py.
    Retaining bin/offlineimap as a skeletal piece only.  Contains
    about three lines of code now.  This will make many things
    easier, including debugging.
  * Added library version check to bin/offlineimap and
    offlineimap/init.py.
  * Moved __main__.ui to functions in UIBase: getglobalui() and
    setglobalui().
  * Added license comments to some source files that were missing them.
  * Moved some code from offlineimap/init.py to new file
    offlineimap/syncmaster.py to help dileneate between code that
    performs different functions.
  * Moved threadexited from offlineimap/init.py to
    offlineimap/threadutil.py.
  * offlineimap.py is back to ease the use of OfflineIMAP in single-user
    installations.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 07 Oct 2002 05:08:08 -0500

offlineimap (3.2.8) unstable; urgency=low

  * Added a work-around for some IMAP servers that respond poorly
    to LIST "" "".  It will now do LIST "" "*", for them only.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 30 Sep 2002 10:48:01 -0500

offlineimap (3.2.7) unstable; urgency=low
